# mechanical-workshop-system

./: .gitignore  README.md  alembic.ini  main.py  pyproject.toml  requirements.txt  seed.py
alembic/: env.py
alembic/versions/: 37889df420f0_add_status_field_to_serviceorder.py  50bd01cc01a7_enum_correction.py
app/core/: config.py
app/crud/: crud_base.py  crud_customer.py  crud_mechanic.py  crud_service_item
app/db/: session.py
app/models/: customer.py  part.py  service_item.py  service_order.py  vehicle.py
app/schemas/: customer.py  mechanic.py  part.py  service_item.py  service_order.py  validator.py  vehicle.py
mechanical_workshop_system.egg-info/: PKG-INFO  SOURCES.txt
src/alembic/: env.py
src/alembic/versions/: 4a407555ee51_initial.py  96edd5c06841_initial.py
src/app/: main.py
src/app/api/: deps.py  users.py
src/app/api/v1/: api.py
src/app/api/v1/endpoints/: auth.py  customer.py  mechanic.py  part.py  service_item.py  service_order.py  vehicle.py
src/app/core/: config.py  security.py
src/app/crud/: __init__.py  crud_base.py  crud_customer.py  crud_mechanic.py  crud_part.py  crud_service_item.py  crud_service_order.py  crud_user.py  crud_vehicle.py
src/app/db/: base.py
src/app/models/: __init__.py  customer.py  mechanic.py  part.py  service_item.py  service_order.py  user.py  vehicle.py
src/app/schemas/: __init__.py  custom_validator.py  customer.py  mechanic.py  part.py  role.py  service_item.py  service_order.py  token.py  user.py  vehicle.py
tests/: conftest.py  test_crud_customer.py  test_crud_mechanic.py
